[gd_scene load_steps=2 format=3 uid="uid://cbhkdaifd8q8t"]

[ext_resource type="Script" uid="uid://dmktmx3gyr5rx" path="res://ui/pause_hud/pause_ui.gd" id="1_nnkm3"]

[node name="PauseUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnkm3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.25, 0.192157)

[node name="MainMenu" type="CenterContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="Continue" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
text = "Continue"

[node name="ChangeLevel" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
text = "Change Level"

[node name="Settings" type="Button" parent="MainMenu/VBox"]
visible = false
layout_mode = 2
disabled = true
text = "Settings"

[node name="MainMenu" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="MainMenu/VBox"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MainMenu/VBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MainMenu/VBox/ChangeLevel" to="." method="_on_change_level_pressed"]
[connection signal="pressed" from="MainMenu/VBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/VBox/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MainMenu/VBox/Exit" to="." method="_on_exit_pressed"]
